fix home screen design collapse

--- a/TestMaker/wwwroot/css/site.css
+++ b/TestMaker/wwwroot/css/site.css
@@ -63,6 +63,7 @@ body {
   height:calc(100vh - 40px);
 }
 .footer {
+  position:fixed;
   bottom: 0;
   width: 100%;
   white-space: nowrap;
